# find-skills

./: SKILL.md
examples/: api_client.py  index.html
skill_recommend_server/: .env.example  .gitignore  AGENT_SKILLS_RECOMMENDATION_REPORT.md  README.md  config.yaml  pyproject.toml  requirements.txt  run.bat  run.sh
skill_recommend_server/data/: faiss_index.index  faiss_index.state.json  skills - 副本.json  skills.db  skills.json
skill_recommend_server/examples/: dataset_make.py  inspect_storage.py
skill_recommend_server/skills_recommender/: __init__.py  app_main.py  logger.py  sdk.py
skill_recommend_server/skills_recommender/api/: __init__.py  app.py
skill_recommend_server/skills_recommender/catalog/: catalog.py
skill_recommend_server/skills_recommender/config/: __init__.py
skill_recommend_server/skills_recommender/embedding/: __init__.py  gte.py
skill_recommend_server/skills_recommender/llm/: __init__.py  adapters.py
skill_recommend_server/skills_recommender/monitoring/: __init__.py  monitoring.py
skill_recommend_server/skills_recommender/recommendation/: __init__.py  engine.py
skill_recommend_server/skills_recommender/storage/: __init__.py  storage.py
skill_recommend_server/skills_recommender/vector_store/: faiss_store.py
skill_recommend_server/tests/: TESTING.md  test_catalog.py  test_config_monitoring.py  test_entrypoints.py  test_recommendation.py  test_storage.py
